Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125730

QAnyStringView('\xE4') creates an invalid UTF-8 string (expected: valid L1)

XMLWordPrintable

    • 3
    • 3ff55648c (dev), 93e39f7b7 (6.8), 566426714 (6.7), ba2e7b7e9 (tqtc/lts-6.5), d897e6a5f (dev), a2d2114de (tqtc/lts-6.2), 28eefb03d (dev)
    • Foundation Sprint 108, Foundation Sprint 109, Foundation Sprint 110, Foundation Sprint 111, Foundation Sprint 112, Foundation Sprint 113

      QAnyStringView('\xE4') {{visit()}}s as an invalid QUtf8StringView. Expected would be a valid QLatin1StringView containing 'ä'.

      This is because the const Char & ctor uses the Char type to determine the tag and since "ä" is by Qt convention UTF-8, so is char. This is correct, but inconsistent with the rest of Qt APIs which treat char as QLatin1Char.

        For Gerrit Dashboard: QTBUG-125730
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: